feature: update selection controls

--- a/packages/e2e/tsconfig.json
+++ b/packages/e2e/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "baseUrl": "./node_modules",
-    "types": ["cypress", "node"]
+    "types": ["cypress", "node"],
+    "sourceMap": false
   },
   "exclude": ["node_modules"]
 }
