--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -8,13 +8,8 @@
     "build": "vite build",
     "dev": "vite serve",
     "prettier": "prettier -c --config ../../.prettierrc \"src/**/*.{ts,tsx}\"",
-    "eslint": "eslint ./src --ext .ts,.tsx --quiet",
-    "typescript": "tsc -noEmit --pretty"
+    "eslint": "eslint ./src --ext .ts,.tsx --quiet"
   },
-  "bugs": {
-    "url": "https://github.com/lochbrunner/react-flow-editor/issues"
-  },
-  "homepage": "https://github.com/lochbrunner/react-flow-editor#readme",
   "devDependencies": {
     "@types/react": "17.0.30",
     "@types/react-dom": "^18.0.8",
