infra: update ts config, update eslintrc, fix prettier

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     "composite": true,
     "target": "es5",
     "module": "esnext",
-    "lib": ["dom", "esnext"],
-    "jsx": "react",
+    "lib": ["es2021", "ESNext", "dom", "dom.iterable"],
+    "jsx": "react-jsx",
     "declaration": true,
     "outDir": "dist",
     "strict": true,
