--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -5,15 +5,17 @@ on:
     types: [created]
 
 jobs:
-  deploy:
+  gp-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
+
       - uses: pnpm/action-setup@v2
         name: Install pnpm
         id: pnpm-install
@@ -22,8 +24,10 @@ jobs:
           run_install: |
             - recursive: true
               args: [--frozen-lockfile, --strict-peer-dependencies]
+
       - name: Build library
         run: pnpm --dir ./packages/examples run build
+
       - name: Init new repo in dist folder and commit generated files
         run: |
           git init
@@ -35,6 +39,7 @@ jobs:
           git config --local user.email "email@gmail.com"
           git config --local user.name "User Name"
           git commit -m 'deploy'
+
       - name: Force push to destination branch
         uses: ad-m/github-push-action@v0.6.0
         with:
