--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -1,12 +1,13 @@
 name: github pages deploy
 
 on:
-  release:
-    types: [created]
+  push:
+    branches:
+      - main
 
 jobs:
-  gp-deploy:
-    runs-on: ubuntu-latest
+  deploy:
+    runs-on: commit
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -46,4 +47,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: gh-pages
           force: true
-          directory: packages/examples/dist
+          directory: docs
