--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -1,11 +1,12 @@
 name: github pages deploy
 
 on:
-  release:
-    types: [created]
+  push:
+    branches:
+      - main
 
 jobs:
-  deploy:
+  gh-deploy:
     runs-on: commit
     steps:
       - name: Checkout
