fix: add github pages from main branch

--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "dev": "vite serve",
     "prettier": "prettier -c --config ../../.prettierrc \"src/**/*.{ts,tsx}\"",
-    "eslint": "eslint ./src --ext .ts,.tsx --quiet"
+    "eslint": "eslint ./src --ext .ts,.tsx --quiet",
+    "build-docs": "pnpm build && mv ../../public ../../docs"
   },
   "devDependencies": {
     "@types/react": "17.0.30",
