--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -21,7 +21,7 @@
     "vite-plugin-html": "^3.2.0"
   },
   "dependencies": {
-    "@voiso/react-flow-editor": "file:../react-flow-editor/",
+    "@voiso/react-flow-editor": "file:../react-flow-editor/src",
     "@nanostores/react": "^0.4.0",
     "nanostores": "^0.7.0",
     "react": "17.0.2",
