--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -6,8 +6,77 @@ on:
 jobs:
   e2e:
     runs-on: ubuntu-latest
+    needs:
+      - assets
     steps:
-      - uses: actions/checkout@v3
-      - name: Build the docker-compose stack
-        run: docker-compose up --build --abort-on-container-exit
-  
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20.x
+
+      - name: Build assets
+
+        steps:
+          - name: Cache node modules
+            uses: actions/cache@v3
+            with:
+              path: |
+                node_modules
+                .pnpm-store
+                ./packages/react-flow-editor/node_modules
+                ./packages/e2e/node_modules
+                ./packages/examples/node_modules
+              key: ${{ runner.os }}-node-modules-${{ hashFiles('pnpm-lock.yaml') }}
+              restore-keys: |
+                ${{ runner.os }}-node-modules-
+
+          - name: Install dependencies
+            run: pnpm install
+
+          - name: Build project
+            run: pnpm run build
+
+          - name: Upload artifacts
+            uses: actions/upload-artifact@v3
+            with:
+              name: react-flow-editor-dist
+              path: packages/react-flow-editor/dist
+              retention-days: 7
+
+      - name: Cache Cypress
+        uses: actions/cache@v3
+        with:
+          path: .cache/Cypress
+          key: ${{ runner.os }}-cypress-${{ hashFiles('pnpm-lock.yaml') }}
+
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: |
+            node_modules
+            .pnpm-store
+            ./packages/react-flow-editor/node_modules
+            ./packages/e2e/node_modules
+            ./packages/examples/node_modules
+          key: ${{ runner.os }}-node-modules-${{ hashFiles('pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-node-modules-
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Install Cypress
+        run: CYPRESS_CACHE_FOLDER=./.cache/Cypress npx cypress install
+
+      - name: Start server
+        run: pnpm run serve:ci &
+        env:
+          CI: true
+
+      - name: Run Cypress tests
+        run: pnpm run cypress:ci
+        env:
+          CI: true
