--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -1,7 +1,9 @@
 name: e2e
 
 on:
-  - pull_request
+  pull_request:
+    branches:
+      - main
 
 jobs:
   e2e:
@@ -15,8 +17,6 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 20.x
-
-      - name: Build assets
 
       - name: Cache node modules
         uses: actions/cache@v3
@@ -37,34 +37,17 @@ jobs:
       - name: Build project
         run: pnpm run build
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+      - name: Download built assets
+        uses: actions/download-artifact@v3
         with:
           name: react-flow-editor-dist
           path: packages/react-flow-editor/dist
-          retention-days: 7
 
       - name: Cache Cypress
         uses: actions/cache@v3
         with:
           path: .cache/Cypress
           key: ${{ runner.os }}-cypress-${{ hashFiles('pnpm-lock.yaml') }}
-
-      - name: Cache node modules
-        uses: actions/cache@v3
-        with:
-          path: |
-            node_modules
-            .pnpm-store
-            ./packages/react-flow-editor/node_modules
-            ./packages/e2e/node_modules
-            ./packages/examples/node_modules
-          key: ${{ runner.os }}-node-modules-${{ hashFiles('pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-node-modules-
-
-      - name: Install dependencies
-        run: pnpm install
 
       - name: Install Cypress
         run: CYPRESS_CACHE_FOLDER=./.cache/Cypress npx cypress install
