--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -18,6 +18,11 @@ jobs:
         with:
           node-version: 20.x
 
+      - name: Install pnpm
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 8
+
       - name: Cache node modules
         uses: actions/cache@v3
         with:
