fix(github actions): fix steps

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -39,7 +39,8 @@ jobs:
         run: pnpm install
 
       - name: Build assets
-        working_directory: ./packages/react-flow-editor
+        with:
+          working_directory: ./packages/react-flow-editor
         run: pnpm run build
 
       - name: Cache Cypress
