--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -42,21 +42,16 @@ jobs:
         run: pnpm run build
         working-directory: ./packages/react-flow-editor
 
+      - name: Cypress run
+        uses: cypress-io/github-action@v6
+        with:
+          build: pnpm run serve:ci
+          start: pnpm run cypress:ci
+          env:
+            CI: true
+
       - name: Cache Cypress
         uses: actions/cache@v3
         with:
           path: .cache/Cypress
           key: ${{ runner.os }}-cypress-${{ hashFiles('pnpm-lock.yaml') }}
-
-      - name: Install Cypress
-        run: CYPRESS_CACHE_FOLDER=./.cache/Cypress pnpm install cypress
-
-      - name: Start server
-        run: pnpm run serve:ci &
-        env:
-          CI: true
-
-      - name: Run Cypress tests
-        run: pnpm run cypress:ci
-        env:
-          CI: true
