fix(github actions): install vite

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -39,8 +39,7 @@ jobs:
         run: pnpm install
 
       - name: Install vite
-        run: pnpm install
-        working-directory: ./packages/examples
+        run: pnpm install -g vite
 
       - name: Build assets
         run: pnpm run build
