--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -51,4 +51,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
+          install: false
+          project: ./packages/e2e/
+          browser: chrome
           start: pnpm run serve:ci && pnpm run cypress:ci
