--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -51,5 +51,5 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          directory: ../../
+          working-directory: .
           start: pnpm run serve:ci && pnpm run cypress:ci
