--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -48,8 +48,13 @@ jobs:
         run: pnpm run build
         working-directory: ./packages/react-flow-editor
 
+      - name: Install Cypress
+        run: pnpm cypress install
+        working-directory: .
+
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
           working-directory: .
           start: pnpm run serve:ci && pnpm run cypress:ci
+          parallel: true
