--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "prettier": "pnpm -r prettier",
     "eslint": "pnpm -r eslint",
     "typescript": "pnpm -r typescript",
-    "cypress:docker": "docker-compose up --build --abort-on-container-exit",
-    "serve:ci": "cd packages/examples && vite serve --host",
-    "cypress:ci": "cd packages/e2e && TESTING_MODE=pipelines cypress run -C cypress.config.ts --env TESTING_MODE=pipelines --quiet --browser chrome"
+    "cypress:docker": "docker-compose up --build --abort-on-container-exit"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.31.0",
