--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -9,7 +9,8 @@
     "dev": "vite serve",
     "prettier": "prettier -c --config ../../.prettierrc \"src/**/*.{ts,tsx}\"",
     "eslint": "eslint ./src --ext .ts,.tsx --quiet",
-    "build-docs": "pnpm build && mv ../../public ../../docs"
+    "build-docs": "pnpm build && mv ../../public ../../docs",
+    "serve:ci": "vite serve --host"
   },
   "devDependencies": {
     "@types/react": "17.0.30",
