--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "prettier": "pnpm -r prettier",
     "eslint": "pnpm -r eslint",
     "typescript": "pnpm -r typescript",
-    "cypress:docker": "docker-compose up --build --abort-on-container-exit"
+    "cypress:docker": "docker-compose up --build --abort-on-container-exit",
+    "serve:ci": "cd packages/examples && vite serve --host",
+    "cypress:ci": "cd packages/e2e && TESTING_MODE=pipelines cypress run -C cypress.config.ts --env TESTING_MODE=pipelines --quiet --browser chrome"
+  },
+  "dependencies": {
+    "cypress": "^13.6.2",
+    "cypress-real-events": "^1.7.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.31.0",
